--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ extra:
       link: upi://pay?pa=8625057783@airtel&pn=GAUTAM SURESH PATIL&tn=Pay money to GAUTAM SURESH PATIL
   generator: false
 
-copyright: Copyright &copy; 2023 Gautam Patil
+copyright: Copyright &copy; 2023 Gautam Patil & Gunjan Kawale
 
 nav:
   - Home: index.md
