--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ nav:
     - Unit3: FDA/Unit3.md
     - Unit4: FDA/Unit4.md
     - Unit5: FDA/Unit5.md
+    - CAE-1-Question-Bank: FDA/FDA-CAE-1-Question-Bank.md
   
   - EE:
     - EE/index.md
