Added Redundant Question Banks.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,9 @@ nav:
     - Unit3: EP/Unit3.md
     - Unit4: EP/Unit4.md
     - Unit5: EP/Unit5.md
-    - CAE-1-Question-bank: EP/EP-CAE-1-Question-Bank.md
+    - CAE-1-Question-b\Bank: EP/EP-CAE-1-Question-Bank.md
+    - CAE-2-Question-Bank: EP/EP-CAE-2-Question-Bank.md
+    - CAE-3-Question-Bank: EP/EP-CAE-3-Question-Bank.md
 
   - FDA:
     - FDA/index.md
@@ -66,7 +68,10 @@ nav:
     - Unit3: FDA/Unit3.md
     - Unit4: FDA/Unit4.md
     - Unit5: FDA/Unit5.md
-    - CAE-1-Question-bank: FDA/FDA-CAE-1-Question-Bank.md
+    - CAE-1-Question-Bank: FDA/FDA-CAE-1-Question-Bank.md
+    - CAE-2-Question-Bank: FDA/FDA-CAE-2-Question-Bank.md
+    - CAE-3-Question-Bank: FDA/FDA-CAE-3-Question-Bank.md
+
   
   - EE:
     - EE/index.md
@@ -75,7 +80,9 @@ nav:
     - Unit3: EE/Unit3.md
     - Unit4: EE/Unit4.md
     - Unit5: EE/Unit5.md
-    - CAE-1-Question-bank: EE/EE-CAE-1-Question-Bank.md
+    - CAE-1-Question-Bank: EE/EE-CAE-1-Question-Bank.md
+    - CAE-2-Question-Bank: EE/EE-CAE-2-Question-Bank.md
+    - CAE-3-Question-Bank: EE/EE-CAE-3-Question-Bank.md
 
   - IKS:
     - IKS/index.md
@@ -84,5 +91,18 @@ nav:
     - Unit3: IKS/Unit3.md
     - Unit4: IKS/Unit4.md
     - Unit5: IKS/Unit5.md
-    - CAE-1-Question-bank: IKS/IKS-CAE-1-Question-Bank.md
+    - CAE-1-Question-Bank: IKS/IKS-CAE-1-Question-Bank.md
+    - CAE-2-Question-Bank: IKS/IKS-CAE-2-Question-Bank.md
+    - CAE-3-Question-Bank: IKS/IKS-CAE-3-Question-Bank.md
+
+  - PPS:
+    - PPS/index.md
+    - Unit1: PPS/Unit1.md
+    - Unit2: PPS/Unit2.md
+    - Unit3: PPS/Unit3.md
+    - Unit4: PPS/Unit4.md
+    - Unit5: PPS/Unit5.md
+    - CAE-1-Question-Bank: PPS/PPS-CAE-1-Question-Bank.md
+    - CAE-2-Question-Bank: PPS/PPS-CAE-2-Question-Bank.md
+    - CAE-3-Question-Bank: PPS/PPS-CAE-3-Question-Bank.md
 
