--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,9 @@ extra:
     - icon: fontawesome/solid/indian-rupee-sign
       link: upi://pay?pa=8625057783@airtel&pn=GAUTAM SURESH PATIL&tn=Pay money to GAUTAM SURESH PATIL
   generator: false
+  analytics:
+    provider: google
+    property: G-P3VMB8L9PK
 
 copyright: Copyright &copy; 2023 Shrinivas Narhare & Gunjan  Kawale
 
